--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@vercel/analytics": "1.3.1",
     "@vercel/speed-insights": "1.0.10",
+    "autoprefixer": "^10.4.21",
     "next": "14.2.11",
+    "postcss": "^8.5.6",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "tailwindcss": "^4.1.16"
   }
 }
