--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
   "name": "smartifyai-next",
-  "private": true,
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "vercel-build": "npm install --legacy-peer-deps && next build"
+    "start": "next start"
   },
   "dependencies": {
-    "@vercel/analytics": "1.3.1",
-    "@vercel/speed-insights": "1.0.10",
-    "autoprefixer": "^10.4.21",
-    "next": "14.2.11",
-    "postcss": "^8.5.6",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "tailwindcss": "^4.1.16"
+    "framer-motion": "^12.23.24",
+    "next": "14.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3"
   }
 }
