--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.23.24",
     "next": "14.1.0",
+    "nodemailer": "^7.0.10",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
