--- a/package.json
+++ b/package.json
@@ -8,16 +8,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
     "@vercel/analytics": "^1.5.0",
+    "axios": "^1.13.1",
     "framer-motion": "^12.23.24",
-    "next": "14.1.0",
+    "lucide-react": "^0.552.0",
+    "next": "^14.2.33",
+    "next-auth": "^4.24.13",
     "nodemailer": "^7.0.10",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
+    "stripe": "^19.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18"
   }
 }
