--- a/package.json
+++ b/package.json
@@ -8,23 +8,31 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "@prisma/client": "^6.19.0",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.13.1",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
+    "cookie": "^1.0.2",
     "framer-motion": "^12.23.24",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.552.0",
+    "mongoose": "^8.19.3",
     "next": "^14.2.33",
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
-    "stripe": "^19.2.0"
+    "stripe": "^19.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
+    "prisma": "^6.19.0",
     "tailwindcss": "^3.4.18"
   }
 }
