--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "^14.2.33",
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.10",
+    "openai": "^6.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
