--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.552.0",
+    "mammoth": "^1.11.0",
     "mongoose": "^8.19.3",
     "next": "^14.2.33",
-    "next-auth": "^4.24.13",
+    "next-auth": "^4.24.7",
     "nodemailer": "^7.0.10",
     "openai": "^6.8.1",
+    "pdf-parse": "^2.4.5",
+    "pptx-parser": "^1.1.7-beta.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
