--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "mongoose": "^8.19.3",
     "next": "^14.2.33",
     "next-auth": "^4.24.7",
-    "nodemailer": "^7.0.10",
+    "nodemailer": "6.10.1",
     "openai": "^6.8.1",
     "pdf-parse": "^2.4.5",
     "pptx-parser": "^1.1.7-beta.9",
@@ -40,5 +40,8 @@
     "postcss": "^8.5.6",
     "prisma": "^6.19.0",
     "tailwindcss": "^3.4.18"
+  },
+  "overrides": {
+    "nodemailer": "6.10.1"
   }
 }
