--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.11.1",
+    "@auth/core": "0.41.1",
+    "@auth/prisma-adapter": "2.11.1",
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
